# programming-genai-code

./: .gitignore  LICENSE  README.md  pyproject.toml
genai/: __init__.py  agent.py  audio.py  book.py  book_code_corpus.json  book_corpus.json  book_output_corpus.json  chess.py  code.py  code_zoo.json  code_zoo_raw.json  cove.py  crag.py  embed.py  imagegen.py  llm.py  pal.py  perf.py  planning.py  privacy.py  prompting.py  rag.py  security.py  snake.py  thinking.py  tokens.py  vision.py  viz.py
scripts/: _agent_bench_out.txt  _agent_bench_probe.py  _alt_scaffold.py  _attention_probe.py  _augmentation_context_out.txt  _augmentation_context_probe.py  _batch2_progress.txt  _batch_progress.txt  _batch_quality_probe.py  _book_window_probe.py  _bookrag_probe.py  _caption_digest.py  _codezoo_capture.py  _confidence_out.txt  _confidence_probe.py  _convo_probe.py  _convo_sag_probe.py  _cot_capture.py  _cove_capture.py  _cove_demo_out.txt  _cove_limit_out.txt  _cove_plot_out.json  _cove_probe.py  _crag_capture.py  _crag_local_out.txt  _crag_plot_out.json  _crag_probe.py  _crag_trap_out.txt  _diffusion_gallery_probe.py  _efficiency_effort_probe.py  _efficiency_moe_probe.py  _efficiency_probe.py  _embeddinggemma_probe.py  _execute_out.txt  _front_faq_probe.py  _genagents_probe.py  _gptoss_autonomy_out.txt  _gptoss_mem_conf_out.txt  _gptoss_reflexion_out.txt  _gptoss_tooldocs_out.txt  (+90 more)
